Controller fix - application fix

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,14 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 # Consola H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+spring.jpa.show-sql=true
+
+# configuracao para criar as tabelas automaticamente
+#spring.jpa.hibernate.ddl-auto=create
+
+# configuraacao para executar ao inizar
+#spring.datasource.initialization-mode=always
+spring.sql.init.mode=always
+spring.sql.init.data-locations=classpath:data.sql
+spring.jpa.defer-datasource-initialization=true
